--- a/react_box_color/src/App.css
+++ b/react_box_color/src/App.css
@@ -1,6 +1,4 @@
-.App {
-  text-align: center;
-}
+
 
 .App-logo {
   height: 40vmin;
@@ -12,10 +10,14 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
-.App-header {
+.count{
+  background: none;
+  margin: none;
+  padding: none;
+}
+.App{
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
