--- a/react_box_color/src/App.css
+++ b/react_box_color/src/App.css
@@ -21,9 +21,22 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content:space-around;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+.Box{
+  background-color: #282c34;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+h6{
+  text-align: center;
 }
 
 @keyframes App-logo-spin {
